<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- AdMob -->
    <!-- this is identifier of AdMob for debug -->
    <!--  string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string-->
    <!-- this is identifier of AdMob for product -->
    <string name="banner_ad_unit_id">ca-app-pub-6277935195775081/1579228452</string>

    <!-- common -->
    <string name="empty"></string>
    <string name="app_name">μ\'Siam</string>
    <string name="action_settings">Settings</string>

    <!-- Main -->
    <string name="how_to_play">〜How to play〜</string>
    <string name="play_content">・STARTをおしてクイズに答えよう！\n・クイズはスマホの中の音楽から出るよ!\n・クイズを３回間違えたらGame Over</string>
    <string name="alert_no_music_title">クイズ生成エラー</string>
    <string name="alert_no_music_message">クイズを生成するのに音楽情報が足りません。\n異なるタイトルの音楽を%d曲以上ミュージックプレイヤで読み込んで下さい。</string>
    <string name="main_start_button">START</string>
    <string name="main_histry_button">HISTRY</string>

    <!-- Questions -->
    <string name="question_number">問%02d.　</string>
    <string name="question_introduction_album">この曲のアルバム名は何？</string>
    <string name="question_introduction_singer">この曲を歌っているのは次のうちどれ？</string>
    <string name="question_introduction_music">この曲の曲名は何？</string>
    <string name="question_introduction_age">この曲が発売されたのはいつ？</string>
    <string name="question_text_album">%sが入っているアルバムは次のうちどれ？</string>
    <string name="question_text_singer">%sを歌っているのは誰？</string>
    <string name="question_text_age">%sが発売されたのはいつ？</string>

	<!-- Result -->
	<string name="result_title_button">TITLE</string>
	<string name="result_retry_button">RETRY</string>
	<string name="result_title">RESULT</string>
	<string-array name="result_ranking">
		<item>1位</item>
		<item>2位</item>
		<item>3位</item>
		<item>4位</item>
		<item>5位</item>
		<item>CLEAR</item>
    </string-array>
    <string name="result_score">%dpt</string>
    <string name="result_genre_introduction">イントロ</string>
    <string name="result_genre_text">文章</string>
    <string name="result_count" formatted="false">%02d問中%02d問正解</string>
	<string name="game_over">GAME OVER</string>
	<string-array name="game_over_face">
	    <item>(´・ω・`)</item>
	    <item>＼(^o^)／</item>
	    <item>((((；ﾟДﾟ))))</item>
	    <item>( ‘д‘⊂彡☆))Д´)</item>
	    <item>(｀；ω；´)</item>
	</string-array>
</resources>
