<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00000000"
        android:layout_weight="1"
        >

        <LinearLayout
            android:id="@+id/gameover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#00000000"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:paddingBottom="100dp"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/game_over"
                android:gravity="center"
                android:textSize="44sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/faceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="44sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#00000000"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/result_title"
                android:gravity="center"
                android:textSize="44sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/rankingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="38sp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="44sp"
                />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:gravity="left|center"
                        android:textSize="22sp"
                        android:text="@string/result_genre_introduction"
                        />

                    <TextView
                        android:id="@+id/introduction_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="left|center"
                        android:textSize="22sp"
                        android:textColor="#FFFFFF"
                        />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:gravity="left|center"
                        android:textSize="22sp"
                        android:text="@string/result_genre_text"
                        />

                    <TextView
                        android:id="@+id/text_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="left|center"
                        android:textSize="22sp"
                        android:textColor="#FFFFFF"
                        />

                </TableRow>

            </TableLayout>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#00000000"
        android:gravity="bottom"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:background="#00000000"
            >

				<Button
				    android:id="@+id/btnTitle"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:layout_marginLeft="20dp"
				    android:layout_marginRight="10dp"
				    android:layout_weight="1"
				    android:text="@string/result_title_button"
				    android:background="@drawable/button_setting"
				    style="?android:attr/buttonBarButtonStyle"
				    />

				<Button
				    android:id="@+id/btnRetry"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="20dp"
				    android:layout_weight="1"
				    android:text="@string/result_retry_button"
				    android:background="@drawable/button_setting"
				    style="?android:attr/buttonBarButtonStyle"
				    />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
